--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/EnricoMassoneDeltatre/minimalistic-react-template#readme",
   "dependencies": {
+    "@frontendmasters/pet": "^1.0.3",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
