--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
   "homepage": "https://github.com/EnricoMassoneDeltatre/minimalistic-react-template#readme",
   "dependencies": {
     "@frontendmasters/pet": "^1.0.3",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "@reach/router": "^1.3.4",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
